syntax = "proto3";
package com.demo;

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {

  rpc getEcho(EchoRequest) returns (EchoResponse) {}
}


